# 3G-usb_cdc-esp32-webrtc

./: README.md  partitions.csv  sdkconfig  sdkconfig.sim7670.usb
components/espressif__esp_modem/src/: esp_modem_dte.cpp
components/espressif__usb_host_cdc_acm/host_test/parsing_tests/main/: idf_component.yml
components/espressif__usb_host_cdc_acm/test_app/main/: idf_component.yml
components/ppp-gsm/: CMakeLists.txt  Kconfig.projbuild  gt_pppos.c  gt_pppos.h  idf_component.yml
components/sepfy__libpeer/: CMakeLists.txt
components/sepfy__libpeer/src/: CMakeLists.txt  agent.c  buffer.c  dtls_srtp.c  peer_signaling.c  peer_signaling.h  sctp.c  socket.c  stun.c  stun.h
components/sepfy__srtp/: CMakeLists.txt
components/sepfy__srtp/esp-port/: esp_compat.h
main/: CMakeLists.txt  app_main.c  camera.c
webserver-code/: BrowserClient.js  WebRTCserver.js  index.html  nginx.default
